--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 
 <p align="center"><font face="Arial">hi welcome to my website!!</font></p>
-<p align="left"><font face="Arial">my stuff:</font></p>
-<a class="tooltip-bottom" data-stt-tile="unblockers" href="https://grymmllyns-export.netlify.app">unblockers</a></p>
+<p align="center"><font face="Arial">my stuff:</font></p>
+<p align="center"><font face="Arial"><a href="https://m863xx-8080.csb.app">
+unblocker (public ver.) | slate</a></font></p>
 <p align="center"><font face="Arial">2023 grymmllyn</font></p>
 <p align="center"><font face="Arial">(will prob update later or sum)</font></p>
 
