--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <title>grymmllyn's garden</title>
+<!-- <link rel="icon" type="image/x-icon" href="/images/REPLACE.filetype"> for icon of the website-->
 </head>
 
-<body>
+<body link="#0000FF" text="#FFFFFF" bgcolor="#000000">
 
-<p align="center"><font face="Arial">grymmllyn's garden</font></p>
+<p align="center"><i><font face="SF Pro Rounded" size="7">grymmllyn's garden</font></i></p>
 
 
-<p align="center"><font face="Arial">hi welcome to my website!!</font></p>
-<p align="center"><font face="Arial">my stuff:</font></p>
-<p align="center"><font face="Arial"><a href="https://m863xx-8080.csb.app">
-unblocker (public ver.) | slate</a></font></p>
-<p align="center"><font face="Arial">2023 grymmllyn</font></p>
-<p align="center"><font face="Arial">(will prob update later or sum)</font></p>
-
+<p align="center"><font face="SF Pro Rounded" size="5" color="#CCCCCC">hi welcome to my website!!</font></p>
+<p align="center"><font face="SF Pro Rounded" size="4" color="#CCCCCC">my stuff:</font></p>
+<p align="center"><b><font face="SF Pro Rounded">
+<a target="_blank" href="https://m863xx-8080.csb.app">unblocker (public ver.) | slate</a></font></b></p>
+<p align="center"><font size="1" face="SF Pro Rounded">2024 grymmllyn © / (will prob update later or sum)</font></p>
+<div align='center'><u><font size="1" face="SF Pro Rounded">last updated:
+	<!--webbot bot="Timestamp" S-Type="REGENERATED" S-Format="%m/%d/%Y %I:%M:%S %p" --></font></u><br / ><small>
 </body>
 
 </html>
