--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <p align="center"><font face="SF Pro Rounded" size="4" color="#CCCCCC">my stuff:</font></p>
 <p align="center"><b><font face="SF Pro Rounded">
 <a target="_blank" href="https://m863xx-8080.csb.app">unblocker (public ver.) | slate</a></font></b></p>
-<p align="center"><font size="1" face="SF Pro Rounded">2024 grymmllyn © / (will prob update later or sum)</font></p>
-<div align='center'><u><font size="1" face="SF Pro Rounded">last updated:
-	<!--webbot bot="Timestamp" S-Type="REGENERATED" S-Format="%m/%d/%Y %I:%M:%S %p" --></font></u><br / ><small>
+<p align="center"><font size="1" face="SF Pro Rounded" color="#CCCCCC">2024 grymmllyn © / (will prob update later or sum)</font></p>
+
+
 </body>
 
 </html>
