--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<html>
-
 <head>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -9,14 +7,21 @@
 
 <body link="#0000FF" text="#FFFFFF" bgcolor="#000000">
 
-<p align="center"><i><font face="SF Pro Rounded" size="7">grymmllyn's garden</font></i></p>
+<p align="center"><b><i><font face="Yu Gothic UI Light" size="7">grymmllyn's garden</font></i></b></p>
 
 
-<p align="center"><font face="SF Pro Rounded" size="5" color="#CCCCCC">hi welcome to my website!!</font></p>
-<p align="center"><font face="SF Pro Rounded" size="4" color="#CCCCCC">my stuff:</font></p>
-<p align="center"><b><font face="SF Pro Rounded">
-<a target="_blank" href="https://m863xx-8080.csb.app">unblocker (public ver.) | slate</a></font></b></p>
-<p align="center"><font size="1" face="SF Pro Rounded" color="#CCCCCC">2024 grymmllyn © / (will prob update later or sum)</font></p>
+<p align="center"><font face="Yu Gothic UI Light" size="5" color="#CCCCCC">hi welcome to my website!!</font></p>
+<p align="center"><font face="Yu Gothic UI Light" size="4" color="#CCCCCC">my stuff:</font></p>
+<p align="center"><b><font face="Yu Gothic UI Light">
+<a target="_blank" href="https://csb.app">unblocker (placeholder!!!)</a></font></b></p>
+<p align="center"><b><font face="Yu Gothic UI Light" size="4" color="#CCCCCC">
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSdKEDnQc_dGUCEmxNiwtJDATcMfHOr4DAChNXB1O-fHxhTMhg/viewform?usp=sf_link">
+report sum of the unblockers or smthin</a></font></b></p>
+<p align="center"><font size="1" face="Yu Gothic UI Light" color="#CCCCCC">2024 grymmllyn © / (updates will come slowly)</font></p>
+
+
+<p align="right"><font face="Yu Gothic UI Light" size="1" color="#000000">hey 
+what are you doing?</font></p>
 
 
 </body>
